# ros2-android-demo

./: README.md  bringup.sh
Arduino_code/car_base_android/: car_base_android.ino
Arduino_code/remote_car_base_android/: remote_car_base_android.ino
app/base_controller/: gradle.properties  local.properties
app/base_controller/src/main/: AndroidManifest.xml
app/base_controller/src/main/java/org/ros2/examples/android/baseController/: BaseController.java  BaseControllerNode.java  ListenerNode.java
app/base_controller/src/main/res/layout/: main.xml
app/rmf_android/src/main/: AndroidManifest.xml
app/rmf_joystick/: build.gradle  gradle.properties  settings.gradle
app/rmf_joystick/src/main/: AndroidManifest.xml
app/rmf_joystick/src/main/java/org/ros2/examples/android/rmfJoystick/: ListenerNode.java  TalkerNode.java  rmfActivity.java  rmfNode.java
app/rmf_joystick/src/main/res/layout/: main.xml
configs/: android_ros1_ros2.yaml  android_ros2_ros1.yaml
move_robot_android/: CMakeLists.txt  package.xml
move_robot_android/launch/: car.launch
move_robot_android/src/: move_robot_android.cpp
platformio/car_base/: platformio.ini
remote_robot_android/: CMakeLists.txt  package.xml
remote_robot_android/launch/: car.launch
remote_robot_android/src/: remote_robot_android.cpp
scripts/: bringup.sh  demo_install.sh
src/rmf_android/: gradle.properties  local.properties  package.xml
src/rmf_android/src/main/java/org/ros2/examples/android/rmfTool/: rmfActivity.java  rmfNode.java
src/rmf_android/src/main/res/layout/: main.xml
